[gd_scene load_steps=88 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://frames/skelet_idle_anim_f2.png" type="Texture" id=2]
[ext_resource path="res://flask_big_red.png" type="Texture" id=3]
[ext_resource path="res://Bullet.gd" type="Script" id=4]
[ext_resource path="res://frames/orc_shaman_idle_anim_f0.png" type="Texture" id=5]
[ext_resource path="res://frames/chest_mimic_open_anim_f2.png" type="Texture" id=6]
[ext_resource path="res://frames/imp_idle_anim_f0.png" type="Texture" id=7]
[ext_resource path="res://frames/tiny_zombie_idle_anim_f3.png" type="Texture" id=8]
[ext_resource path="res://frames/swampy_idle_anim_f0.png" type="Texture" id=9]
[ext_resource path="res://frames/ogre_idle_anim_f0.png" type="Texture" id=10]
[ext_resource path="res://frames/tiny_zombie_run_anim_f3.png" type="Texture" id=11]
[ext_resource path="res://frames/tiny_zombie_run_anim_f1.png" type="Texture" id=12]
[ext_resource path="res://frames/tiny_zombie_run_anim_f2.png" type="Texture" id=13]
[ext_resource path="res://frames/tiny_zombie_idle_anim_f0.png" type="Texture" id=14]
[ext_resource path="res://frames/imp_idle_anim_f2.png" type="Texture" id=15]
[ext_resource path="res://frames/tiny_zombie_run_anim_f0.png" type="Texture" id=16]
[ext_resource path="res://frames/swampy_idle_anim_f2.png" type="Texture" id=17]
[ext_resource path="res://frames/orc_warrior_idle_anim_f2.png" type="Texture" id=18]
[ext_resource path="res://frames/orc_shaman_idle_anim_f2.png" type="Texture" id=19]
[ext_resource path="res://frames/tiny_zombie_idle_anim_f1.png" type="Texture" id=20]
[ext_resource path="res://frames/tiny_zombie_idle_anim_f2.png" type="Texture" id=21]
[ext_resource path="res://frames/swampy_idle_anim_f3.png" type="Texture" id=22]
[ext_resource path="res://frames/swampy_run_anim_f0.png" type="Texture" id=23]
[ext_resource path="res://frames/swampy_run_anim_f1.png" type="Texture" id=24]
[ext_resource path="res://frames/swampy_run_anim_f2.png" type="Texture" id=25]
[ext_resource path="res://frames/swampy_run_anim_f3.png" type="Texture" id=26]
[ext_resource path="res://frames/skelet_run_anim_f1.png" type="Texture" id=27]
[ext_resource path="res://frames/skelet_run_anim_f0.png" type="Texture" id=28]
[ext_resource path="res://frames/skelet_run_anim_f2.png" type="Texture" id=29]
[ext_resource path="res://frames/skelet_run_anim_f3.png" type="Texture" id=30]
[ext_resource path="res://frames/orc_warrior_idle_anim_f0.png" type="Texture" id=31]
[ext_resource path="res://frames/orc_warrior_idle_anim_f1.png" type="Texture" id=32]
[ext_resource path="res://frames/orc_warrior_run_anim_f0.png" type="Texture" id=33]
[ext_resource path="res://frames/orc_warrior_run_anim_f3.png" type="Texture" id=34]
[ext_resource path="res://frames/orc_warrior_idle_anim_f3.png" type="Texture" id=35]
[ext_resource path="res://frames/orc_warrior_run_anim_f2.png" type="Texture" id=36]
[ext_resource path="res://frames/orc_warrior_run_anim_f1.png" type="Texture" id=37]
[ext_resource path="res://frames/orc_shaman_idle_anim_f1.png" type="Texture" id=38]
[ext_resource path="res://frames/ogre_idle_anim_f2.png" type="Texture" id=39]
[ext_resource path="res://frames/orc_shaman_idle_anim_f3.png" type="Texture" id=40]
[ext_resource path="res://frames/orc_shaman_run_anim_f2.png" type="Texture" id=41]
[ext_resource path="res://frames/orc_shaman_run_anim_f0.png" type="Texture" id=42]
[ext_resource path="res://frames/orc_shaman_run_anim_f3.png" type="Texture" id=43]
[ext_resource path="res://frames/orc_shaman_run_anim_f1.png" type="Texture" id=44]
[ext_resource path="res://frames/ogre_idle_anim_f1.png" type="Texture" id=45]
[ext_resource path="res://frames/ogre_idle_anim_f3.png" type="Texture" id=46]
[ext_resource path="res://frames/ogre_run_anim_f1.png" type="Texture" id=47]
[ext_resource path="res://frames/ogre_run_anim_f2.png" type="Texture" id=48]
[ext_resource path="res://frames/ogre_run_anim_f0.png" type="Texture" id=49]
[ext_resource path="res://frames/necromancer_idle_anim_f0.png" type="Texture" id=50]
[ext_resource path="res://frames/ogre_run_anim_f3.png" type="Texture" id=51]
[ext_resource path="res://frames/necromancer_idle_anim_f1.png" type="Texture" id=52]
[ext_resource path="res://frames/imp_idle_anim_f1.png" type="Texture" id=53]
[ext_resource path="res://frames/necromancer_idle_anim_f2.png" type="Texture" id=54]
[ext_resource path="res://frames/necromancer_idle_anim_f3.png" type="Texture" id=55]
[ext_resource path="res://frames/necromancer_run_anim_f0.png" type="Texture" id=56]
[ext_resource path="res://frames/necromancer_run_anim_f3.png" type="Texture" id=57]
[ext_resource path="res://frames/muddy_idle_anim_f1.png" type="Texture" id=58]
[ext_resource path="res://frames/necromancer_run_anim_f1.png" type="Texture" id=59]
[ext_resource path="res://frames/necromancer_run_anim_f2.png" type="Texture" id=60]
[ext_resource path="res://frames/muddy_idle_anim_f3.png" type="Texture" id=61]
[ext_resource path="res://frames/muddy_idle_anim_f2.png" type="Texture" id=62]
[ext_resource path="res://frames/muddy_run_anim_f3.png" type="Texture" id=63]
[ext_resource path="res://frames/muddy_run_anim_f0.png" type="Texture" id=64]
[ext_resource path="res://frames/muddy_run_anim_f1.png" type="Texture" id=65]
[ext_resource path="res://frames/muddy_run_anim_f2.png" type="Texture" id=66]
[ext_resource path="res://frames/chest_mimic_open_anim_f0.png" type="Texture" id=67]
[ext_resource path="res://frames/imp_run_anim_f0.png" type="Texture" id=68]
[ext_resource path="res://frames/imp_run_anim_f1.png" type="Texture" id=69]
[ext_resource path="res://frames/imp_idle_anim_f3.png" type="Texture" id=70]
[ext_resource path="res://frames/imp_run_anim_f3.png" type="Texture" id=71]
[ext_resource path="res://frames/imp_run_anim_f2.png" type="Texture" id=72]
[ext_resource path="res://frames/skelet_idle_anim_f3.png" type="Texture" id=73]
[ext_resource path="res://frames/skelet_idle_anim_f0.png" type="Texture" id=74]
[ext_resource path="res://frames/swampy_idle_anim_f1.png" type="Texture" id=75]
[ext_resource path="res://frames/chest_mimic_open_anim_f1.png" type="Texture" id=76]
[ext_resource path="res://frames/muddy_idle_anim_f0.png" type="Texture" id=77]
[ext_resource path="res://frames/skelet_idle_anim_f1.png" type="Texture" id=78]
[ext_resource path="res://Entity.gd" type="Script" id=79]

[sub_resource type="CircleShape2D" id=2]
radius = 9.0

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 74 ), ExtResource( 78 ), ExtResource( 2 ), ExtResource( 73 ), ExtResource( 28 ), ExtResource( 27 ), ExtResource( 29 ), ExtResource( 30 ) ],
"loop": true,
"name": "skeleton",
"speed": 5.0
}, {
"frames": [ ExtResource( 31 ), ExtResource( 32 ), ExtResource( 18 ), ExtResource( 35 ), ExtResource( 33 ), ExtResource( 37 ), ExtResource( 36 ), ExtResource( 34 ) ],
"loop": true,
"name": "orc",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 75 ), ExtResource( 17 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ) ],
"loop": true,
"name": "swampy",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 53 ), ExtResource( 15 ), ExtResource( 70 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 72 ), ExtResource( 71 ) ],
"loop": true,
"name": "imp",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 38 ), ExtResource( 19 ), ExtResource( 40 ), ExtResource( 42 ), ExtResource( 44 ), ExtResource( 41 ), ExtResource( 43 ) ],
"loop": true,
"name": "shaman",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 8 ), ExtResource( 16 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 11 ) ],
"loop": true,
"name": "zombie",
"speed": 5.0
}, {
"frames": [ ExtResource( 50 ), ExtResource( 52 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 57 ) ],
"loop": true,
"name": "necro",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 45 ), ExtResource( 39 ), ExtResource( 46 ), ExtResource( 49 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 51 ) ],
"loop": true,
"name": "ogre",
"speed": 5.0
}, {
"frames": [ ExtResource( 77 ), ExtResource( 58 ), ExtResource( 62 ), ExtResource( 61 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 63 ) ],
"loop": true,
"name": "muddy",
"speed": 5.0
}, {
"frames": [ ExtResource( 67 ), ExtResource( 76 ), ExtResource( 6 ) ],
"loop": true,
"name": "mimic",
"speed": 5.0
} ]

[sub_resource type="CanvasItemMaterial" id=5]

[sub_resource type="Animation" id=6]
resource_name = "flash"
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:light_mode")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 0, 2, 0 ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 6.0

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.921569, 0, 0, 1 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="CapsuleShape2D" id=9]
radius = 150.0
height = 200.0

[node name="Enemy" type="Node2D"]
position = Vector2( 534.956, 79.4329 )
script = ExtResource( 79 )

[node name="RigidBody2D" type="RigidBody2D" parent="."]
collision_layer = 8
collision_mask = 20
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
shape = SubResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="RigidBody2D"]
modulate = Color( 0.317647, 0.129412, 0.129412, 1 )
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "imp"
frame = 1
playing = true

[node name="Bullet" type="RigidBody2D" parent="RigidBody2D"]
collision_layer = 8
contacts_reported = 1
contact_monitor = true
can_sleep = false
script = ExtResource( 4 )
bullet_speed = 7

[node name="Sprite" type="Sprite" parent="RigidBody2D/Bullet"]
material = SubResource( 5 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="RigidBody2D/Bullet/Sprite"]
playback_process_mode = 0
anims/flash = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D/Bullet"]
position = Vector2( 0, 2 )
shape = SubResource( 4 )

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -14.5951
margin_top = -21.4583
margin_right = 17.4049
margin_bottom = -15.4583
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource( 9 )
[connection signal="body_entered" from="RigidBody2D" to="RigidBody2D" method="_on_RigidBody2D_body_entered"]
[connection signal="body_exited" from="RigidBody2D" to="RigidBody2D" method="_on_RigidBody2D_body_exited"]
[connection signal="animation_finished" from="RigidBody2D/Bullet/Sprite/AnimationPlayer" to="RigidBody2D/Bullet" method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="PlayerDetector" to="RigidBody2D" method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="RigidBody2D" method="_on_PlayerDetector_body_exited"]
